test/classes/errors/nilability-init-var/init-var-nonnil-unmanaged-from-nonnil-borrowed.chpl
//  lhs: unmanaged!  rhs: borrowed!  error: mm

class MyClass {
  var x: int;
}

var obj = new MyClass(); var rhs = obj.borrow();

var lhs: unmanaged MyClass = rhs;
