test/classes/errors/nilability-init-var/init-var-nonnil-unmanaged-from-nonnil-borrowed.good
init-var-nonnil-unmanaged-from-nonnil-borrowed.chpl:9: error: cannot initialize variable 'lhs' of type 'unmanaged MyClass' from a 'borrowed MyClass'
